--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+  <script src="https://cdn.ckeditor.com/4.13.0/standard/ckeditor.js"></script>
 </head>
 
 <body>
@@ -42,6 +43,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script>
+        CKEDITOR.replace('editor1');
+    </script>
 </body>
 
 </html>
