--- a/public/index.html
+++ b/public/index.html
@@ -27,10 +27,24 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
-  <script src="https://cdn.ckeditor.com/4.13.0/standard/ckeditor.js"></script>
+  <style>
+    body{
+      animation: slideup 1s;
+    }
+    @keyframes slideup{
+      from{
+        transform: translateY(50px);
+        opacity: 0;
+      }
+      to{
+        transform: translateY(0);
+        opacity: 1;
+      }
+    }
+  </style>
 </head>
 
-<body>
+<body >
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
   <!--
@@ -43,9 +57,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script>
-        CKEDITOR.replace('editor1');
-    </script>
 </body>
 
 </html>
